test/shouldPass/expr/lessThanInt.pas
program Sample;
var
  i : boolean = false;

begin
  i := 1 < 3;
  writeln(i)
end.
